EXTRA_DIST = CAIROConfig.cmake \
             CUPSConfig.cmake \
             FONTCONFIGConfig.cmake \
             FREETYPEConfig.cmake \
             FindLCMS.cmake \
             FindQt3.cmake \
             LIBART_LGPLConfig.cmake \
             LIBXML2Config.cmake \
             Makefile.am \
             SCRIBUSQTConfig.cmake
