EXTRA_DIST = CAIROConfig.cmake \
             CupsConfig.cmake \
             FONTCONFIGConfig.cmake \
             FREETYPEConfig.cmake \
             FindLCMS.cmake \
             FindQt3.cmake \
             LIBART_LGPLConfig.cmake \
             LibXml2Config.cmake \
             Makefile.am \
             SCRIBUSQTConfig.cmake
