INCLUDE_DIRECTORIES(
"${CMAKE_SOURCE_DIR}/scribus"
)

FILE( GLOB GIMP_STYLE_PALETTES *.gpl )
FILE( GLOB XML_PALETTES *.xml )
FILE( GLOB EPS_PALETTES *.eps )
FILE( GLOB RTF_LICENSES *.rtf )

#Avoid CMakeLists.txt
SET(TXT_LICENSES "${CMAKE_CURRENT_SOURCE_DIR}/COPYING_RESENE.txt" "${CMAKE_CURRENT_SOURCE_DIR}/Japanese_Traditional_README.txt")

INSTALL(FILES ${GIMP_STYLE_PALETTES} ${XML_PALETTES} ${EPS_PALETTES} ${RTF_LICENSES} ${TXT_LICENSES}
 DESTINATION ${SHAREDIR}swatches
)
