INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}
${CMAKE_SOURCE_DIR}/scribus
)

INSTALL(FILES
template.xml
  DESTINATION ${TEMPLATEDIR}
)

INSTALL(FILES
template.de.xml
  DESTINATION ${TEMPLATEDIR}
)

INSTALL(FILES
br1/br1.png
br1/br1tn.png
br1/map.jpg
br1/br1.sla.gz
  DESTINATION ${TEMPLATEDIR}br1
)

INSTALL(FILES
nl1/kites.jpg
nl1/nl1.png
nl1/nl1tn.png
nl1/nl1.sla.gz
  DESTINATION ${TEMPLATEDIR}nl1
)

INSTALL(FILES
nl2/flowers.jpg
nl2/nl2.png
nl2/nl2tn.png
nl2/nl2.sla.gz
  DESTINATION ${TEMPLATEDIR}nl1
)

INSTALL(FILES
textbased/an_image.jpg
textbased/author.jpg
textbased/textbased.png
textbased/textbased.sla.gz
textbased/textbasedtn.png
  DESTINATION ${TEMPLATEDIR}textbased
)

INSTALL(FILES
sc_presentation/presentation.png
sc_presentation/presentation.sla.gz
sc_presentation/presentationtn.png
  DESTINATION ${TEMPLATEDIR}sc_presentation
)

INSTALL(FILES
cc/Cheat_Cube.png
cc/Cheat_Cubetn.png
cc/Cheat_Cube.sla.gz
  DESTINATION ${TEMPLATEDIR}cc
)

INSTALL(FILES
mc/menu_template1.png
mc/menu_template1tn.png
mc/menu_template1.sla.gz
  DESTINATION ${TEMPLATEDIR}mc
)

INSTALL(FILES
cover1/cover1.png
cover1/cover1tn.png
cover1/cover1.sla.gz
  DESTINATION ${TEMPLATEDIR}cover1
)

INSTALL(FILES
cover2/cover2.png
cover2/cover2tn.png
cover2/cover2.sla.gz
  DESTINATION ${TEMPLATEDIR}cover2
)

INSTALL(FILES
cover3/cover3.png
cover3/cover3tn.png
cover3/cover3.sla.gz
  DESTINATION ${TEMPLATEDIR}cover3
)

INSTALL(FILES
cover4/cover4.png
cover4/cover4tn.png
cover4/cover4.sla.gz
  DESTINATION ${TEMPLATEDIR}cover4
)

INSTALL(FILES
cover5/cover5.png
cover5/cover5tn.png
cover5/cover5.sla.gz
  DESTINATION ${TEMPLATEDIR}cover5
)

INSTALL(FILES
buscard1/Business_Card_1.png
buscard1/Business_Card_1tn.png
buscard1/buscard1.sla.gz
  DESTINATION ${TEMPLATEDIR}buscard1
)

INSTALL(FILES
buscard2/Business_Card_2.png
buscard2/Business_Card_2tn.png
buscard2/buscard2.sla.gz
  DESTINATION ${TEMPLATEDIR}buscard2
)

INSTALL(FILES
buscard3/Business_Card_3.png
buscard3/Business_Card_3tn.png
buscard3/buscard3.sla.gz
  DESTINATION ${TEMPLATEDIR}buscard3
)

INSTALL(FILES
buscard4/Business_Card_4.png
buscard4/Business_Card_4tn.png
buscard4/buscard4.sla.gz
  DESTINATION ${TEMPLATEDIR}buscard4
)

INSTALL(FILES
buscard5/Business_Card_5.png
buscard5/Business_Card_5tn.png
buscard5/buscard5.sla.gz
  DESTINATION ${TEMPLATEDIR}buscard5
)

INSTALL(FILES
buscard6/Business_Card_6.png
buscard6/Business_Card_6tn.png
buscard6/buscard6.sla.gz
  DESTINATION ${TEMPLATEDIR}buscard6
)

INSTALL(FILES
buscard7/Business_Card_7.png
buscard7/Business_Card_7tn.png
buscard7/buscard7.sla.gz
  DESTINATION ${TEMPLATEDIR}buscard7
)

INSTALL(FILES
buscard8/Business_Card_8.png
buscard8/Business_Card_8tn.png
buscard8/buscard8.sla.gz
  DESTINATION ${TEMPLATEDIR}buscard8
)

INSTALL(FILES
buscard9/Business_Card_9.png
buscard9/Business_Card_9tn.png
buscard9/buscard9.sla.gz
  DESTINATION ${TEMPLATEDIR}buscard9
)

INSTALL(FILES
buscard10/Business_Card_10.png
buscard10/Business_Card_10tn.png
buscard10/buscard10.sla.gz
  DESTINATION ${TEMPLATEDIR}buscard10
)

INSTALL(FILES
buscard11/Business_Card_11.png
buscard11/Business_Card_11tn.png
buscard11/buscard11.sla.gz
  DESTINATION ${TEMPLATEDIR}buscard11
)